--- a/css/OurServices.css
+++ b/css/OurServices.css
@@ -85,28 +85,6 @@
     margin-top: 10%;
 }
 
-#in_between1{
-    overflow: hidden;
-    background-image: url('../img/lap2.jpg');
-    background-attachment: fixed;
-    
-}
-
-#in_between2{
-    overflow: hidden;
-    background-image: url('../img/graph2.jpg');
-    background-attachment: fixed;
-    
-}
-
-#in_between3{
-    overflow: hidden;
-    background-image: url('../img/social2.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    
-}
-
 .additional_service{
     overflow: hidden;
     width: 65%;
@@ -153,6 +131,25 @@
     #top{
         background-image: url(../img/ourservices/fancydesk-xlarge.jpg);
     }
+
+    #in_between1{
+        overflow: hidden;
+        background-image: url('../img/lap/lap-xlarge.jpg');
+        background-attachment: fixed;
+    }
+
+    #in_between2{
+        overflow: hidden;
+        background-image: url('../img/graph/graph-xlarge.jpg');
+        background-attachment: fixed;
+    }
+
+    #in_between3{
+        overflow: hidden;
+        background-image: url('../img/social/social-xlarge.jpg');
+        background-size: cover;
+        background-attachment: fixed;   
+    }
 }
 
 /* MQ for DESKTOP*/
@@ -160,6 +157,26 @@
     #top{
         background-image: url(../img/ourservices/fancydesk-l.jpg);
     }
+
+    #in_between1{
+        overflow: hidden;
+        background-image: url('../img/lap/lap-l.jpg');
+        background-attachment: fixed;
+    }
+
+    #in_between2{
+        overflow: hidden;
+        background-image: url('../img/graph/graph-l.jpg');
+        background-attachment: fixed;
+    }
+
+    #in_between3{
+        overflow: hidden;
+        background-image: url('../img/social/social-l.jpg');
+        background-size: cover;
+        background-attachment: fixed;   
+    }
+
     .additional_service p{
         width: 30%;
     }
@@ -169,6 +186,25 @@
 @media screen and (max-width:980px){
     #top{
         background-image: url(../img/ourservices/fancydesk-m.jpg);
+    }
+
+    #in_between1{
+        overflow: hidden;
+        background-image: url('../img/lap/lap-m.jpg');
+        background-attachment: fixed;
+    }
+
+    #in_between2{
+        overflow: hidden;
+        background-image: url('../img/graph/graph-m.jpg');
+        background-attachment: fixed;
+    }
+
+    #in_between3{
+        overflow: hidden;
+        background-image: url('../img/social/social-m.jpg');
+        background-size: cover;
+        background-attachment: fixed;   
     }
 
     .Presentation_text{
@@ -238,6 +274,25 @@
         background-image: url(../img/ourservices/fancydesk-s.jpg);
     }
 
+    #in_between1{
+        overflow: hidden;
+        background-image: url('../img/lap/lap-s.jpg');
+        background-attachment: fixed;
+    }
+
+    #in_between2{
+        overflow: hidden;
+        background-image: url('../img/graph/graph-s.jpg');
+        background-attachment: fixed;
+    }
+
+    #in_between3{
+        overflow: hidden;
+        background-image: url('../img/social/social-s.jpg');
+        background-size: cover;
+        background-attachment: fixed;   
+    }
+
     .left_Presentation_text h3{
         font-size: 32px;
     }
@@ -290,6 +345,6 @@
 
     .additional_service p{
         width: 100%;
-        margin-left: 3%;
+        margin-left: 0%;
     }
 }
