--- a/css/home.css
+++ b/css/home.css
@@ -149,6 +149,7 @@
 
 #media-sect {
     margin-top:150px;
+    padding-bottom: 10%;
 }
 
 /***************************  MEDIA QUERY (MQ) ******************************/
