--- a/css/OurServices.css
+++ b/css/OurServices.css
@@ -41,6 +41,7 @@
 }
 
 .left_Presentation_text button:hover{
+    cursor: pointer;
     background-color: white;
     color: black;
 }
@@ -87,7 +88,7 @@
 
 .additional_service{
     overflow: hidden;
-    width: 65%;
+    width: 45%;
     height: 50%;
     margin: 0 auto;
     margin-top: 10%;
@@ -100,28 +101,26 @@
 .additional_service h4{
     overflow: hidden;
     font-size: 20px;
-    margin-top: 3%;
-    float: left;
-
+    margin-top: 3.5%;
+    padding-left: 2%;
 }
 
 .additional_service p{
     overflow: hidden;
-    float: left;
     font-weight: normal;
     font-size: 18px;
-    width: 40%;
+    width: 100%;
     margin-top: 3%;
-    margin-left: 15%;
-
+    margin: auto;
 }
 
 .additional_service ion-icon{
     overflow: hidden;
     float: left;
-    margin-left: 5%;
-    width: 150px;
-    height: 150px;
+    margin-top: 2%;
+    margin-left: 30%;
+    width: 100px;
+    height: 100px;
 }
 
 /***************************  MEDIA QUERY (MQ) ******************************/
@@ -177,8 +176,12 @@
         background-attachment: fixed;   
     }
 
+    .additional_service ion-icon{
+        margin-left: 20%;
+    }
+
     .additional_service p{
-        width: 30%;
+        width: 100%;
     }
 }
 
@@ -261,9 +264,7 @@
     }
 
     .additional_service p{
-        margin-left: 10%;
         font-size: 16px;
-        width: 40%;
     }
     
 }/* END of TABLET*/
