--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -38,3 +38,39 @@
     width: 40px;
     height: 40px;
 }
+
+/***************************  MEDIA QUERY (MQ) ******************************/
+
+/*MEDIA QUERT for BIGGER DESKTOP*/
+@media screen and (min-width:1200px){
+    
+}
+
+/* MQ for DESKTOP*/
+@media screen and (max-width:1200px){
+    
+
+}
+
+/* MQ for TABLET*/
+@media screen and (max-width:980px){
+    .thanks h1{
+        font-size: 34px;
+    }
+
+    .thanks p{
+        font-size: 24px;
+    }
+   
+}/* END of TABLET*/
+
+/* MQ for MOBILE*/
+@media screen and (max-width:480px){
+    .thanks h1{
+        font-size: 28px;
+    }
+
+    .thanks p{
+        font-size: 18px;
+    }
+}
