--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -69,34 +69,37 @@
 #Sam .proPic:hover, #Amine .proPic:hover{
     background:url("../img/linkedin.png");
     background-size:contain;
+    border:10px solid #2cb1e5;
  }
 
 .meet-info{
     background:white;
     margin:auto;
-    width:45%;
-    padding:10px;
+    width:60%;
+    padding:8px;
     padding-bottom:30px;
     margin-top:20px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
     border-radius:2px;
+    transition: 1s;
 }
 
 .meet-info h4{
-    font-size:20px;
+    font-size:30px;
     font-weight:900;
     margin-bottom:5px;
 }
 
 .meet-info h5{
-    font-size:15px;
-    margin-top:0;
+    font-size:20px;
+    margin-top:-10px;
 }
 
 #meetDuo p{
     width:80%;
     margin:auto;
     text-align: left;
+    font-size:20px;
 }
 
 #meetDuo-2{
@@ -148,6 +151,10 @@
     font-weight:600;
     margin-top:0;
     font-family: 'Nunito', sans-serif;
+}
+
+.value-item p{
+    font-size:20px;
 }
 
 /***************************  MEDIA QUERY (MQ) ******************************/
