--- a/css/OurServices.css
+++ b/css/OurServices.css
@@ -88,7 +88,7 @@
 
 .additional_service{
     overflow: hidden;
-    width: 45%;
+    width: 65%;
     height: 50%;
     margin: 0 auto;
     margin-top: 10%;
@@ -101,26 +101,28 @@
 .additional_service h4{
     overflow: hidden;
     font-size: 20px;
-    margin-top: 3.5%;
-    padding-left: 2%;
+    margin-top: 3%;
+    float: left;
+
 }
 
 .additional_service p{
     overflow: hidden;
+    float: left;
     font-weight: normal;
     font-size: 18px;
-    width: 100%;
+    width: 40%;
     margin-top: 3%;
-    margin: auto;
+    margin-left: 15%;
+
 }
 
 .additional_service ion-icon{
     overflow: hidden;
     float: left;
-    margin-top: 2%;
-    margin-left: 30%;
-    width: 100px;
-    height: 100px;
+    margin-left: 5%;
+    width: 150px;
+    height: 150px;
 }
 
 /***************************  MEDIA QUERY (MQ) ******************************/
@@ -147,7 +149,7 @@
         overflow: hidden;
         background-image: url('../img/social/social-xlarge.jpg');
         background-size: cover;
-        background-attachment: fixed;   
+        background-attachment: fixed;
     }
 }
 
@@ -173,15 +175,11 @@
         overflow: hidden;
         background-image: url('../img/social/social-l.jpg');
         background-size: cover;
-        background-attachment: fixed;   
-    }
-
-    .additional_service ion-icon{
-        margin-left: 20%;
+        background-attachment: fixed;
     }
 
     .additional_service p{
-        width: 100%;
+        width: 30%;
     }
 }
 
@@ -207,7 +205,7 @@
         overflow: hidden;
         background-image: url('../img/social/social-m.jpg');
         background-size: cover;
-        background-attachment: fixed;   
+        background-attachment: fixed;
     }
 
     .Presentation_text{
@@ -260,11 +258,13 @@
 
     .additional_service h4{
         font-size: 18px;
-        
+        float: none;
     }
 
     .additional_service p{
+        margin-left: 0%;
         font-size: 16px;
+        width: 100%;
     }
     
 }/* END of TABLET*/
@@ -291,7 +291,7 @@
         overflow: hidden;
         background-image: url('../img/social/social-s.jpg');
         background-size: cover;
-        background-attachment: fixed;   
+        background-attachment: fixed;
     }
 
     .left_Presentation_text h3{
