--- a/css/head-and-foot.css
+++ b/css/head-and-foot.css
@@ -9,6 +9,8 @@ h1,h2,h3,h4,h5 {
 
 p {
     font-family: 'Nunito', sans-serif;
+    line-height: 1.5;
+    font-size:18px;
 }
 
 strong {
@@ -85,6 +87,7 @@ footer {
     height:100px;
     padding-bottom:20px;
     clear:both;
+    box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.25);
 }
 
 footer h4{
