--- a/css/head-and-foot.css
+++ b/css/head-and-foot.css
@@ -216,14 +216,16 @@ footer h4{
     width:30%;
     margin-top: 180px;
     margin-left:35%;
-    font-size: 28px;
     text-align: center;
     position:absolute;
     text-transform:uppercase;
     color:white;
     font-family: 'Heebo', sans-serif;
-
     }
+
+#center-text p{
+    font-size: 30px !important;
+}
 
 #verticaltext{
     overflow: hidden;
