--- a/css/OurServices.css
+++ b/css/OurServices.css
@@ -107,7 +107,7 @@
 
 #aServ{
     font-family: 'Nunito', sans-serif;
-    font-weight: 0;
+    font-weight: bold;
     overflow: hidden;
     margin-top:20px;
     font-size: 20px;
