--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -2,9 +2,8 @@
 .thanks{
     overflow: hidden;
     text-align: center;
-    color: white;
-    padding-top: 8.5%;
-    padding-bottom: 8.65%;
+    margin-top: 5%;
+    margin-bottom: 15%;
     
 }
 
@@ -12,6 +11,7 @@
     overflow: hidden;
     margin-top: 5%;
     font-size: 40px;
+    color: #2cb1e5;
 }
 
 .thanks p{
@@ -23,17 +23,18 @@
 .thanks button{
     margin-top: 2%;
     height: 60px;
+    width:60px;
     color: white;
     background-color: black;
     font-size: 20px;
     border-radius: 50%;
+    border:none;
 }
 
 .thanks button:hover{
     cursor: pointer;
     border: none;
-    color: black;
-    background-color: white;
+    background-color: #2cb1e5;
 }
 
 .thanks button ion-icon{
@@ -43,12 +44,10 @@
 
 #square{
     overflow: hidden;
-    border: solid black 10px;
     margin-top: 15%;
     margin: 0 auto;
     width: 60%;
     padding: 2%;
-    background-color: #2cb1e5;
 }
 
 /***************************  MEDIA QUERY (MQ) ******************************/
@@ -59,12 +58,19 @@
 
 /* MQ for DESKTOP*/
 @media screen and (max-width:1200px){
-    
+    .thanks {
+        margin-bottom:20%;
+    }
 
 }
 
 /* MQ for TABLET*/
 @media screen and (max-width:980px){
+    .thanks {
+        margin-top:25%;
+        margin-bottom:35%;
+    }
+
     .thanks h1{
         font-size: 34px;
     }
