--- a/css/bookNow.css
+++ b/css/bookNow.css
@@ -30,7 +30,7 @@
         color:black;
     }
 
-    #getintouch p{
+    #sbs-inst{
         overflow: hidden;
         margin-left: 25%;
         font-size: 25px;
@@ -40,18 +40,30 @@
     .instruction{
         padding-top: 10px;
         margin-left: 25%;
+        margin-bottom:100px;
         clear:both;
         overflow:hidden;
     }
 
     .text{
         width: 80%;
+        overflow:hidden;
+        float:left;
+        margin-left:40px;
+    }
+
+    .text h3{
+        float:left;
+        width:100%;
+        margin-bottom:0px;
+        margin-top:15px;
     }
 
     .text p{
+        float:left;
         overflow: hidden;
         font-size: 20px;
-        padding-top: 9%;
+        margin-top:0px;
     }
 
     .steps{
@@ -63,11 +75,11 @@
         overflow: hidden;
         float: left;
         font-size: 45px;
-        margin-top:10px;
+        border-bottom: #2cb1e5 solid 10px;
     }
 
-    .number h2 strong{
-        border-bottom: #2cb1e5 solid 15px;
+    .number h2{
+        margin:0px;
     }
     
     .quote{
@@ -95,6 +107,8 @@
         text-align: center;
         font-size: 20px;
         margin-top:0px;
+        width:75%;
+        margin:0 auto;
     }
     
     .fo input, .fo select{
@@ -146,6 +160,11 @@
         display:none;
     }
 
+    .list{
+        margin-top:50px;
+    }
+
+
     /***************************  MEDIA QUERY (MQ) ******************************/
 
 /*MEDIA QUERT for BIGGER DESKTOP*/
@@ -171,18 +190,17 @@
         font-size: 32px;
     }
 
-    #getintouch p{
+    #sbs-inst{
         margin-left: 10%;
         font-size: 28px;
     }
 
     .instruction{
         margin-left: 10%;
-        padding-top: 7%;
+        margin-bottom:50px;
     }
 
     .number{
-        padding-right: 10%;
         font-size: 32px;
     }
 
@@ -191,8 +209,11 @@
     }
 
     .text{
-        width: 100%;
         font-size: 28px;
+    }
+
+    .text h3{
+        margin-top:0px;
     }
 
     .quote{
@@ -208,26 +229,29 @@
     }
 
     #getintouch{
+        margin:auto;
         margin-top: 5%;
-        width: 100%;
+        width: 70%;
         float: none;
         padding-bottom: 20%;
+        
     }
 
     #touch{
-        width: 60%;
+        width: 80%;
         margin: 0 auto;
         font-size: 28px;
     }
 
-    #getintouch p{
-        width: 60%;
+    #sbs-inst{
+        width: 80%;
         margin: 0 auto;
-        font-size: 24px;
+        font-size: 20px;
+        margin-top:10px;
     }
 
     .instruction{
-        width: 60%;
+        width: 80%;
         margin: 0 auto;
         padding-top: 10%;
     }
@@ -241,8 +265,9 @@
     }
 
     .text{
-        width: 100%;
         font-size: 24px;
+        width:75%;
+        float:left;
     }
 
     .quote{
@@ -265,32 +290,33 @@
     }
 
     #getintouch{
-        margin-top: 5%;
-        width: 100%;
+        margin-top: 10%;
+        width: 90%;
         float: none;
         padding-bottom: 20%;
+        margin:auto;
     }
 
     #touch{
-        width: 60%;
+        width: 80%;
         margin: 0 auto;
         font-size: 24px;
+        margin-top:20%;
     }
 
-    #getintouch p{
-        width: 60%;
+    #sbs-inst{
+        width: 80%;
         margin: 0 auto;
         font-size: 18px;
     }
 
     .instruction{
-        width: 60%;
+        width: 80%;
         margin: 0 auto;
         padding-top: 10%;
     }
 
     .number{
-        padding-right: 5%;
         font-size: 24px;
     }
 
@@ -299,7 +325,6 @@
     }
 
     .text{
-        width: 100%;
         font-size: 18px;
     }
 
