--- a/css/OurServices.css
+++ b/css/OurServices.css
@@ -284,8 +284,8 @@
         width: 100%;
     }
 
-    .pres_square ion-icon{
-        margin-top: 4%;
+    .pres_square h4{
+        margin-top: 2%;
     }
 
     .additional_service{
