--- a/css/OurServices.css
+++ b/css/OurServices.css
@@ -18,6 +18,7 @@
     border-left: white solid 15px;
     font-size: 48px;
     padding-left: 10px;
+    text-transform: uppercase;
     
 }
 
@@ -40,6 +41,7 @@
     color: white;
     background-color: black;
     border:none;
+    text-transform: uppercase;
 }
 
 .left_Presentation_text button:hover{
@@ -71,6 +73,7 @@
 .pres_square h4{
     font-weight: bold;
     font-size: 24px;
+    text-transform: uppercase;
 }
 
 .pres_square p{
@@ -127,6 +130,7 @@
     margin-top:0px;
     clear:both;
     width:100%;
+    text-transform: uppercase;
 }
 
 .additional_service p{
